syntax = "proto3";

//// https://protobuf.dev/reference/cpp/cpp-generated/#message
//option optimize_for = CODE_SIZE;

import "enums.proto";

package Odb.Lib.Protobuf;

//
//  SymbolName.h
//

message SymbolName {

    optional string name = 1;
    optional UnitType unitType = 2;
}
